fix: search on mobile

--- a/src/pages/homepage/HomePage.module.css
+++ b/src/pages/homepage/HomePage.module.css
@@ -32,9 +32,10 @@
 
 .searchContainer {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   width: 100%;
-  gap: 5px;
+  gap: 10px;
 }
 
 .textField {
@@ -72,10 +73,15 @@
     max-width: 80%;
     font-size: var(--font-size-h3);
   }
+
+  .searchContainer {
+    display: flex;
+    flex-direction: row;
+  }
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 1000px) {
   .page {
-    padding: 100px 100px;
+    padding: 100px 130px;
   }
 }
